--- a/css/main.css
+++ b/css/main.css
@@ -94,3 +94,27 @@ h1 {
     margin-left: 5px;
 }
 
+
+.button {
+    background-color: #D103FC;
+    width: 50px;
+    height: 50px;
+    border-radius: 100%;
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    transition: 0.5s;
+}
+
+.button i {
+    color: whitesmoke;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 30px;
+}
+
+.button:hover {
+    transform: rotate(180deg);
+}
