Adjust main margin

--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,8 @@ html {
 .display {
     width: 312px;
     height: 637.2px;
+    margin-left: 40%;
+    margin-top: 30px;
     background-color: #3D47AF ;
     position: relative;
     display: flex;
