--- a/css/main.css
+++ b/css/main.css
@@ -6,10 +6,12 @@
     color : whitesmoke;
     
 }
+
 html {
     background-color: #4F74FF;
-
 }
+
+/* Display */
 .display {
     width: 312px;
     height: 637.2px;
@@ -25,22 +27,17 @@ html {
     
 }
 
+/* Css top */
 .top {
     position: relative;
     width: 100%;
-}
-
-.hello {
-    font-weight: 1000;
-    font-size: 25px;
-    margin-top: 20px;
-    margin-bottom: 20px;
 }
 
 .material-icons {
     color: #7D80AA;
     margin: 0px 3px 5px 3px;
 }
+
 
 .icons {
     display: inline-block;
@@ -56,6 +53,14 @@ html {
     right : 30px;
 }
 
+/* Css Hello */
+.hello {
+    font-weight: 1000;
+    font-size: 25px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 h1 {
     font-size: 10px;
     margin-top: 5px;
@@ -63,7 +68,8 @@ h1 {
     color : #7D80AA;
 }
 
-.box-tasks {
+/* Categories */
+.categories .box-tasks {
     width: 40%;
     height: 70px;
     display: inline-block;
@@ -75,10 +81,11 @@ h1 {
 }
 
 
-.type-tasks p {
+.box-tasks p {
     font-weight: 1000;
 }
 
+/* Today's Tasks */
 .today-tasks .task {
     font-size: 15px;
     font-weight: 1000;
@@ -92,11 +99,12 @@ h1 {
     align-items: center;
 }
 
-.state  {
+
+.task .state  {
     margin-left: 5px;
 }
 
-
+/* Add Tasks */
 .button {
     background-color: #D103FC;
     width: 50px;
@@ -120,3 +128,9 @@ h1 {
 .button:hover {
     transform: rotate(180deg);
 }
+
+.button:active {
+    background-color:#ADBAEB;
+}
+
+
